# BarcodeReader2

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  videobarcodeprocessor.cpp  videobarcodeprocessor.h
